# Minimum required version of CMake
cmake_minimum_required(VERSION 3.12)

# Project name
project(YourProjectName)

# Set C++ standard (e.g., C++11, C++14, C++17, C++20, C++23)
set(CMAKE_CXX_STANDARD 11)

# Optional: Set build type (Release, Debug, etc.)
# Uncomment the following line if you want to set the build type explicitly
# set(CMAKE_BUILD_TYPE Debug)

# Optional: Add custom flags (e.g., for optimization or debugging)
# add_compile_options(-O2)

# Optional: Enable testing
# enable_testing()

# Optional: Add subdirectories for additional source files
# add_subdirectory(src)

# Optional: Add executable target
# add_executable(your_executable_name source_file1.cpp source_file2.cpp)

# Optional: Link libraries if needed
# target_link_libraries(your_executable_name your_library_name)

# Optional: Add tests (uncomment if testing is enabled)
# add_subdirectory(tests)
